methods.picture.MethodsPictureLarge.scala.error
Erreur de compilation :
MethodsPictureLarge:3: error: not found: value faireCase9
      faireCase9()
      ^MethodsPictureLarge:4: error: not found: value descendre
      descendre()
      ^