methods.picture.MethodsPictureLarge.scala.code
override def run() {
  for(y<-0 to 8){
			faireCase9()
    	descendre()
  }   
}
